Fix jump-bug in header nav

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -38,6 +38,7 @@ body > header {
 				background-color: white;
 				@include rollout($rollout-animation-duration, $rollout-animation, ul);
 				figure {
+					border: 1px solid white;
 					margin-bottom: 5px;
 					.normal {
 						display: block;
